feat login screen template

--- a/modules/shared/ui/src/lib/ui-button/ui-button.component.html
+++ b/modules/shared/ui/src/lib/ui-button/ui-button.component.html
@@ -1,1 +1,4 @@
-<p>ui-button works!</p>
+<button
+    [ngClass]="buttonColorClass + ' flex items-center justify-center px-5 py-3 rounded-full hover:bg-green-600 ' + textColorClass + ' font-semibold shadow-md'">
+    <ng-content></ng-content>
+</button>
