--- a/modules/auth/src/lib/login/login.component.html
+++ b/modules/auth/src/lib/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<section class="bg-gray900 h-screen flex flex-col justify-center items-center">
+    <div class="flex flex-col justify-center items-center">
+        <figure>
+            <img class="w-80 m-auto mb-4" alt="Logo" loading="lazy" src="assets/img/spotify_logo_green.png">
+        </figure>
+        <lib-ui-button class="my-2 font-semibold">Acessar Spotify</lib-ui-button>
+    </div>
+</section> 
