--- a/modules/template/src/lib/content/content.component.html
+++ b/modules/template/src/lib/content/content.component.html
@@ -2,17 +2,17 @@
     <div class="flex flex-1">
         <aside class="w-64">
             <nav>
-                search
+                <lib-search></lib-search>
             </nav>
             <section>
-                playlist
+                <lib-playlist></lib-playlist>
             </section>
         </aside>
         <main class="flex-1">
-            main-content
+            <lib-main-content></lib-main-content>
         </main>
     </div>
     <footer>
-        Player
+        <lib-player></lib-player>
     </footer>
 </div>
