feat assembled html structure

--- a/modules/auth/src/lib/login/login.component.html
+++ b/modules/auth/src/lib/login/login.component.html
@@ -3,6 +3,6 @@
         <figure>
             <img class="w-80 m-auto mb-4" alt="Logo" loading="lazy" src="assets/img/spotify_logo_green.png">
         </figure>
-        <lib-ui-button class="my-2 font-semibold">Acessar Spotify</lib-ui-button>
+        <lib-ui-button (click)="login()" class="my-2 font-semibold">Acessar Spotify</lib-ui-button>
     </div>
-</section> 
+</section>
