--- a/modules/shared/ui/src/lib/ui-photo/ui-photo.component.html
+++ b/modules/shared/ui/src/lib/ui-photo/ui-photo.component.html
@@ -1,1 +1,3 @@
-<p>ui-photo works!</p>
+<figure class="w-10 h-10">
+    <img [src]="imageUrl ? imageUrl : 'assets/img/default_playlist_image.jpg'" alt="foto" class="w-full h-full object-cover rounded">
+</figure>
