--- a/modules/shared/ui/src/lib/ui-card/ui-card.component.html
+++ b/modules/shared/ui/src/lib/ui-card/ui-card.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gray800 rounded-lg shadow-md overflow-hidden m-2">
-    <div class="p-4">
-        <ng-content></ng-content>
+<div class="bg-gray900 rounded-lg shadow-md overflow-hidden">
+    <div class="p-2">
+        <ng-content></ng-content> 
     </div>
 </div>
