--- a/modules/shared/ui/src/lib/ui-player/ui-player.component.html
+++ b/modules/shared/ui/src/lib/ui-player/ui-player.component.html
@@ -1,1 +1,6 @@
-<p>ui-player works!</p>
+<button
+    class="w-6 h-6 flex items-center justify-center rounded-full border-2 border-primary text-primary">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-4 h-4">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+    </svg>
+</button>
