--- a/modules/template/src/lib/content/content.component.html
+++ b/modules/template/src/lib/content/content.component.html
@@ -1,22 +1,31 @@
-<div class="h-screen flex flex-col bg-black">
-    <div class="flex flex-1">
-        <aside class="w-80">
-            <lib-ui-card>
-                <lib-search></lib-search>
-            </lib-ui-card>
-            <lib-ui-card class="h-100">
-                <lib-playlist></lib-playlist>
-            </lib-ui-card>
+<section class="min-h-screen flex flex-col bg-black p-2">
+    <div class="flex flex-col md:flex-row flex-1 space-y-4 md:space-y-0 md:space-x-3">
+        <!-- Sidebar (hidden on small screens) -->
+        <aside class="md:w-80 hidden md:block">
+            <div class="mb-3">
+                <lib-ui-card>
+                    <lib-search></lib-search>
+                </lib-ui-card>
+            </div>
+            <div class="mb-3">
+                <lib-ui-card>
+                    <lib-playlist></lib-playlist>
+                </lib-ui-card>
+            </div>
         </aside>
+
+        <!-- Main Content -->
         <main class="flex-1">
             <lib-ui-card>
                 <lib-main-content></lib-main-content>
             </lib-ui-card>
         </main>
     </div>
+
+    <!-- Footer -->
     <footer>
         <lib-ui-card>
             <lib-player></lib-player>
         </lib-ui-card>
     </footer>
-</div>
+</section>
