--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,19 @@
 body {
   font-family: 'Nunito', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #101010;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #242424;
+}
