feat Implement home

--- a/modules/main-content/src/lib/main-content/main-content.component.html
+++ b/modules/main-content/src/lib/main-content/main-content.component.html
@@ -1,1 +1,7 @@
-<p>main-content works!</p>
+<section>
+    <lib-music-dashboard></lib-music-dashboard>
+</section>
+
+<!-- <section>
+    <lib-playlist-view></lib-playlist-view>
+</section> -->
