--- a/modules/player/src/lib/player/player.component.html
+++ b/modules/player/src/lib/player/player.component.html
@@ -1,1 +1,44 @@
-<p>player works!</p>
+<section class="col-span-6 p-1 grid grid-cols-3 gap-6">
+    <div class="flex items-center">
+        <img class="h-14 w-14 mr-4 flex-shrink-0 rounded" [src]="music.album.imageUrl" alt="" />
+        <div class="mr-4">
+            <div class="text-sm text-white text-line-clamp-1 font-light">
+                {{ music.title }}
+            </div>
+            <div class="text-xs text-gray-100 text-line-clamp-1">
+                <span *ngFor="let artist of music.artists">{{ artist.name }}</span>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="h-full flex items-center justify-center">
+            <button (click)="previousTrack()" class="w-5 h-5 text-gray-100 mr-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.8"
+                    stroke="currentColor" class="w-6 h-6 hover:text-primary">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+                </svg>
+            </button>
+            <button (click)="playMusic(music)" *ngIf="!isPlaying" class="rounded-full flex text-gray-100 mr-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-10 h-10 hover:text-primary">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z" />
+                </svg>
+            </button>
+            <button (click)="pauseMusic()" *ngIf="isPlaying" class="rounded-full flex text-gray-100 mr-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-10 h-10 hover:text-primary">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M14.25 9v6m-4.5 0V9M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </button>
+            <button (click)="nextTrack()" class="w-5 h-5 text-gray-100">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.8"
+                    stroke="currentColor" class="w-6 h-6 hover:text-primary">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                </svg>
+            </button>
+        </div>
+    </div>
+</section>
