--- a/modules/main-content/src/lib/music-dashboard/music-dashboard.component.html
+++ b/modules/main-content/src/lib/music-dashboard/music-dashboard.component.html
@@ -7,17 +7,17 @@
                 <img [src]="music.album.imageUrl" alt="Capa do álbum" class="w-full h-48 object-cover rounded-md">
                 <h3 class="text-white text-lg font-semibold mt-2 truncate">{{ music.title }}</h3>
                 <p class="text-gray-400 text-sm mt-1 truncate">{{ music.artists[0].name }}</p>
-                <button
-                    class="absolute bottom-0 right-0 bg-primary text-white p-3 rounded-full opacity-0 group-hover:opacity-100 transition-opacity ease-in-out duration-300 hover:-translate-y-0 mb-[-5px] mr-[-5px]">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 22 24" stroke-width="1.5"
+                <button (click)="playMusic(music)" [ngClass]="{'opacity-0 group-hover:opacity-100 transition-opacity ease-in-out duration-300 hover:-translate-y-0' : music.id !== selectedMusic?.id}"
+                    class="absolute bottom-0 right-0 bg-primary text-white p-3 rounded-full">
+                    <svg *ngIf="music.id !== selectedMusic?.id" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 22 24" stroke-width="1.5"
                         stroke="black" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
                     </svg>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    <svg *ngIf="music.id === selectedMusic?.id" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="black" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25v13.5m-7.5-13.5v13.5" />
-                    </svg> -->
+                    </svg>
                 </button>
             </div>
         </div>
